@@ -16,6 +16,7 @@
 * Updated the test plan.
 * Updated configs and admin scripts for running additional tests.
 * Fixed error in config.
+* Updated siege runner admin script.
 
 2008.06.21 oubiwann
 
